<resources>
    <string name="app_name">2048++</string>
    <string name="dialog_quit_game">Would you to like leave ?</string>
    <string name="tv_win_dialog">It took you %1$s moves, would you like to restart the game?</string>
    <string name="score">score</string>
    <string name="best">best</string>
    <string name="start_game">START GAME</string>
    <string name="restart">Restart</string>
    <string name="play">Play</string>
    <string name="game_over">game over!</string>
    <string name="rate_game">Rate this Game</string>
    <string name="share_app_text">\"Hey! 🌟 Found this Game that\'s been helping to sharping mind.– check it out!\nhttps://play.google.com/store/apps/details?id=%1$s</string>
    <string name="play_store_link">"https://play.google.com/store/apps/details?id=%1$s"</string>
    <string name="privacy_policy_link">"https://sites.google.com/view/2048--game-privacy-policy/"</string>
    <string name="exit_dialog_desc">"Are you sure you want to leave the game? Don't worry your game will be saved."</string>
    <string name="exit_dialog_title">"leave game?"</string>
    <string name="restart_dialog_title">"restart game?"</string>
    <string name="restart_dialog_desc">"Are you sure you want to Restart the game? Your progress will be lost."</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="classic_4x4">CLASSIC (4x4)</string>
    <string name="classic_4x4_small">classic (4x4)</string>
    <string name="small_3x3">SMALL (3x3)</string>
    <string name="small_3x3_small">small (3x3)</string>
    <string name="big_5x5">BIG (5x5)</string>
    <string name="big_5x5_small">big (5x5)</string>
    <string name="default_theme">DEFAULT THEME</string>
    <string name="glass_theme">GLASS TILE</string>
    <string name="pastel_color">PASTEL COLOR</string>
    <string name="pink_monochrome">PINK MONOCHROME</string>
    <string name="border_blue_ocean">BLUE OCEAN</string>
    <string name="bubble_theme">BUBBLES</string>
    <string name="set_theme">SET THEME</string>
    <string name="setting">settings</string>
    <string name="moves">Moves :</string>
    <string name="select_theme">selected theme</string>
    <string name="app_info">app information</string>
    <string name="share_game_app">Share 2048++ Game</string>
    <string name="share_app_desc">Share app with your friends and family</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="privacy_policy_desc">"Read this game's privacy policy "</string>
    <string name="version_number">Version Number</string>
    <string name="rate_game_desc">Rate game on play store</string>
    <string name="theme">themes</string>
    <string name="how_to_play">How to play game</string>
    <string name="read_guide">Read Game\'s guide</string>
    <string name="game_guide">game guide</string>
    <string name="welcome_to_2048">Welcome to 2048++</string>
    <string name="welcome_desc">Hey there! Welcome to the addictive world of 2048++, a game that’s simple to learn but challenging to master. Let’s dive in!</string>
    <string name="consistency_desc">• Consistency is Key: Stick to your strategy. Consistent play will help you develop the skills to handle more complex scenarios.</string>
    <string name="learn_from_mistakes_desc">• Learn from Mistakes: If you lose, don’t get discouraged! Review what went wrong and use it as a learning experience.</string>
    <string name="goal">Goal:</string>
    <string name="new_tile_desc">• New tile of 2 will appear in an empty spot after every move.</string>
    <string name="when_two_tile_desc">• When two tiles with the same number touch, they merge into one! For example, two \'2\' tiles merge to become a \'4\', two \'4\' tiles merge to become an \'8\', and so on.</string>
    <string name="swipe_dir_desc">• Swipe up, down, left, or right to move all the tiles on the board.</string>
    <string name="making_moves">Making Moves:</string>
    <string name="keep_combining_desc">Keep combining tiles until you create a tile with the number 2048. But don’t stop there—see how high you can score!</string>
    <string name="game_over_desc">The game ends when there are no empty spaces left on the board and no possible merges.</string>
    <string name="special_features">Special Features</string>
    <string name="undo_button">Undo Button:</string>
    <string name="made_mistake_desc">Made a mistake? No worries! Use the Undo button to revert your last move.</string>
    <string name="hammer_desc">Use the Hammer to remove one random tile from the board.</string>
    <string name="hammer">Hammer:</string>
    <string name="tips_to_win">Tips to Win</string>
    <string name="keep_highest_desc">1. Keep Your Highest Tile in a Corner: Pick a corner and aim to build your highest tile there.</string>
    <string name="avoid_random_desc">2. Avoid Random Moves: Think a few steps ahead. Avoid making moves that don’t contribute to your larger strategy.</string>
    <string name="snake_pattern_desc">3. Create a Snake Pattern: Arrange your tiles in a snaking pattern from the highest to lowest values.</string>
    <string name="empty_spaces_desc">4. Empty Spaces are Your Friends: Having a few empty spaces is crucial.</string>
    <string name="game_over_">Game Over:</string>
    <string name="practice_and_patience">Practice and Patience:</string>
</resources>