<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/share_tv_text_size18"
            android:src="@drawable/outline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:text="@string/game_guide"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_desc_text_size_22"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_1"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/game_board_margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/game_board_margin_16"
                android:text="@string/welcome_to_2048"
                android:textSize="@dimen/theme_item_name_24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/game_board_margin_16"
                android:text="@string/welcome_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_title_8"
                android:text="@string/how_to_play"
                android:textSize="@dimen/desc_text_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/making_moves"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/swipe_dir_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/when_two_tile_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/new_tile_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/goal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/game_board_margin_16"
                android:text="@string/keep_combining_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/game_over_"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/game_board_margin_16"
                android:text="@string/game_over_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_title_8"
                android:text="@string/special_features"
                android:textSize="@dimen/desc_text_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/undo_button"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/made_mistake_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/hammer"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/game_board_margin_16"
                android:text="@string/hammer_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_title_8"
                android:text="@string/tips_to_win"
                android:textSize="@dimen/desc_text_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/keep_highest_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/avoid_random_desc" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/snake_pattern_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/empty_spaces_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/practice_and_patience"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/text_desc_padding_4"
                android:text="@string/learn_from_mistakes_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/game_board_margin_16"
                android:text="@string/consistency_desc" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>