<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/share_tv_text_size18"
            android:src="@drawable/outline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/dialog_desc_text_size_22" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_1"
        android:background="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/select_theme"
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:layout_marginTop="@dimen/game_board_margin_16"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_desc_text_size_22"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/theme_name_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:background="@drawable/item_glass_effect"
        android:orientation="horizontal"
        android:padding="@dimen/text_desc_padding_4">

        <TextView
            android:id="@+id/theme_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_title_text_size_30"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/text_desc_title_8"
            tools:text="Pink monochrome"
            android:textColor="@color/black"
            android:textSize="@dimen/share_tv_text_size18" />

        <ImageView
            android:layout_width="@dimen/theme_item_name_24sp"
            android:layout_height="@dimen/theme_item_name_24sp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/text_desc_padding_4"
            android:contentDescription="@null"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
            app:tint="@color/black" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:layout_marginTop="@dimen/dialog_button_margin_20"
        android:background="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_margin_20"
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_info"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_desc_text_size_22"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/settings_ll_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_margin_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/outline_menu_book_24"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/game_board_margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/how_to_play"
                android:textColor="@color/black"
                android:textSize="@dimen/share_tv_text_size18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/read_guide"
                android:textColor="@color/black"
                android:textSize="@dimen/high_score_14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_ll_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_margin_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/share_24"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/game_board_margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/share_game_app"
                android:textColor="@color/black"
                android:textSize="@dimen/share_tv_text_size18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/share_app_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/high_score_14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:id="@+id/settings_ll_rate_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_margin_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/outline_star_rate_24"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/game_board_margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/rate_game"
                android:textColor="@color/black"
                android:textSize="@dimen/share_tv_text_size18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/rate_game_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/high_score_14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:id="@+id/settings_ll_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_margin_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/outline_lock_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/game_board_margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/privacy_policy_text"
                android:textColor="@color/black"
                android:textSize="@dimen/share_tv_text_size18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/privacy_policy_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/high_score_14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/game_board_margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_margin_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/baseline_commit_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/game_board_margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/version_number"
                android:textColor="@color/black"
                android:textSize="@dimen/share_tv_text_size18" />

            <TextView
                android:id="@+id/setting_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                tools:text="1.0"
                android:textColor="@color/black"
                android:textSize="@dimen/high_score_14sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>