<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/game_view_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_pager_dimen_350"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dot_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_10"
        app:dotsColor="@android:color/darker_gray"
        app:dotsSize="@dimen/game_board_margin_16"
        app:dotsSpacing="@dimen/button_corner_radius_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_view_pager"
        app:progressMode="true"
        app:selectedDotColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingHorizontal="@dimen/dialog_button_padding_horizontal_40"
        android:paddingVertical="@dimen/dialog_button_padding_vertical_20"
        android:text="@string/start_game"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_desc_text_size_22"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dialog_corner_radius_10"
        app:layout_constraintBottom_toTopOf="@+id/theme_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dot_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_button_margin_20"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingHorizontal="@dimen/theme_button_padding_20"
        android:paddingVertical="@dimen/theme_button_padding_10"
        android:text="@string/setting"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/theme_button_text_size_16"
        android:textStyle="bold"
        app:cornerRadius="@dimen/theme_button_radius_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/theme_game"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_button_margin_20"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingHorizontal="@dimen/theme_button_padding_20"
        android:paddingVertical="@dimen/theme_button_padding_10"
        android:text="@string/theme"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/theme_button_text_size_16"
        android:textStyle="bold"
        app:cornerRadius="@dimen/theme_button_radius_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_game" />
</androidx.constraintlayout.widget.ConstraintLayout>